# IvorySQL

./: .cirrus.format.yml  .cirrus.star  .cirrus.yml  .coderabbit.yaml  .git-blame-ignore-revs  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_CN.md  CONTRIBUTING.md  COPYRIGHT  GNUmakefile.in  Makefile  Notice  README.md  README_CN.md  coding-assistants.md  coding-assistants_CN.md  configure  configure.ac  docker-compose.yaml  meson.build  meson_options.txt
contrib/gb18030_2022/: .gitignore  Makefile  gb18030_2022--1.0.sql  gb18030_2022.control  meson.build  utf8_and_gb18030_2022.c
contrib/gb18030_2022/Maps/: Makefile  UCS_to_GB18030.pl  convutils.pm  gb-18030-2022.xml  gb18030_2022_to_utf8.map  utf8_to_gb18030_2022.map
contrib/gb18030_2022/expected/: copy.out  gb18030_2022_and_utf8.out  gb18030_2022_and_utf8_1.out  json_gb18030.out
contrib/gb18030_2022/sql/: copy.sql  gb18030_2022_and_utf8.sql  json_gb18030.sql
contrib/ivorysql_ora/: .gitignore  Makefile  README.md  gensql.pl  ivorysql_ora--1.0.sql  ivorysql_ora.control  ivorysql_ora_merge_sqls  meson.build  preload_ora_misc.sql
contrib/ivorysql_ora/expected/: datatype_and_func_bugs.out  dbms_lock.out  dbms_session.out  dbms_transaction.out  dbms_utility.out  ora_ascii.out  ora_binary_double.out  ora_binary_float.out  ora_character.out  ora_character_datatype_functions.out  ora_datetime.out  ora_datetime_datatype_functions.out  ora_datetime_ignore_nls_mask.out  ora_dbms_output.out  ora_insert_alias.out  ora_interval-bak.out  ora_interval.out  ora_like_operator.out  ora_merge.out  ora_misc_functions.out  ora_number-bak.out  ora_number.out  ora_raw_long.out  ora_stragg.out  ora_sysview.out  ora_xml_functions.out  test_dba_cons_columns.out  utl_encode.out  utl_file.out  utl_raw.out
contrib/ivorysql_ora/sql/: datatype_and_func_bugs.sql  dbms_lock.sql  dbms_session.sql  dbms_transaction.sql  dbms_utility.sql  ora_ascii.sql  ora_binary_double.sql  ora_binary_float.sql  ora_character.sql  ora_character_datatype_functions.sql  ora_datetime.sql  ora_datetime_datatype_functions.sql  ora_datetime_ignore_nls_mask.sql  ora_dbms_output.sql  ora_insert_alias.sql  ora_interval.sql  ora_like_operator.sql  ora_merge.sql  ora_misc_functions.sql  ora_number.sql  ora_raw_long.sql  ora_stragg.sql  ora_sysview.sql  ora_xml_functions.sql  test_dba_cons_columns.sql  utl_encode.sql  utl_file.sql  utl_raw.sql
contrib/ivorysql_ora/src/: ivorysql_ora.c  sysview--1.0.sql
contrib/ivorysql_ora/src/builtin_functions/: builtin_functions--1.0.sql  character_datatype_functions.c  datetime_datatype_functions.c  dbms_output--1.0.sql  misc_functions.c  numeric_datatype_functions.c
contrib/ivorysql_ora/src/datatype/: binary_double.c  binary_float.c  common_datatypes.c  compatible_oracle_precedence.c  datatype--1.0.sql  dsinterval.c  oracharbyte.c  oracharchar.c  oradate.c  oratimestamp.c  oratimestampltz.c  oratimestamptz.c  oravarcharbyte.c  oravarcharchar.c  raw_long.c  yminterval.c
contrib/ivorysql_ora/src/guc/: guc.c
contrib/ivorysql_ora/src/include/: common_datatypes.h  guc.h  ivorysql_ora.h
contrib/ivorysql_ora/src/insert/: insert_alias.c
contrib/ivorysql_ora/src/merge/: ora_merge.c
contrib/ivorysql_ora/src/sysview/: sysview--1.0.sql  sysview_arguments.sql  sysview_common.sql  sysview_constraints.sql  sysview_functions.c  sysview_procedures.sql  sysview_source.sql
contrib/ivorysql_ora/src/xml_functions/: ora_xml_functions.c  xml_functions--1.0.sql
contrib/ora_btree_gin/: .gitignore  Makefile  meson.build  ora_btree_gin--1.0.sql  ora_btree_gin.c  ora_btree_gin.control
contrib/ora_btree_gin/data/: timestamptz.data
contrib/ora_btree_gin/expected/: binary_double.out  binary_float.out  date.out  init.out  number.out  timestamp.out  timestampltz.out  timestamptz.out  varchar2.out
contrib/ora_btree_gin/sql/: binary_double.sql  binary_float.sql  date.sql  init.sql  number.sql  timestamp.sql  timestampltz.sql  timestamptz.sql  varchar2.sql
contrib/ora_btree_gist/: Makefile  btree_binary_double.c  btree_binary_float.c  btree_dsinterval.c  btree_gist.c  btree_gist.h  btree_interval.c  btree_number.c  btree_timestamp.c  btree_utils_num.c  btree_utils_num.h  btree_utils_var.c  btree_utils_var.h  btree_varcharchar.c  btree_yminterval.c  meson.build  ora_btree_gist--1.0.sql  ora_btree_gist.control
contrib/ora_btree_gist/data/: date.data  dsinterval.data  timestamptz.data  yminterval.data
contrib/ora_btree_gist/expected/: binary_double.out  binary_float.out  date.out  dsinterval.out  init.out  number.out  timestamp.out  timestampltz.out  timestamptz.out  varchar2.out  yminterval.out
contrib/ora_btree_gist/sql/: binary_double.sql  binary_float.sql  date.sql  dsinterval.sql  init.sql  number.sql  timestamp.sql  timestampltz.sql  timestamptz.sql  varchar2.sql  yminterval.sql
contrib/pg_get_functiondef/: .gitignore  Makefile  makefile  meson.build  pg_get_functiondef--1.0.sql  pg_get_functiondef.control  pg_get_functiondef_extend.c  pg_get_functiondef_mul.c  pg_get_functiondef_no_input.c
contrib/pg_get_functiondef/expected/: pg_get_functiondef.out  pg_get_functiondef_1.out
contrib/pg_get_functiondef/sql/: pg_get_functiondef.sql
src/backend/oracle_parser/: .gitignore  Makefile  liboracle_parser.c  meson.build  ora_gram.y  ora_gramparse.h  ora_keywords.c  ora_kwlist_d.h  ora_scan.l  ora_with_function.c
src/backend/utils/cache/: Makefile  catcache.c  lsyscache.c  meson.build  packagecache.c  plancache.c  relcache.c  relmapper.c  syscache.c
src/fe_utils/: .gitignore  Makefile  astreamer_lz4.c  astreamer_zstd.c  meson.build  ora_keywords.c  ora_kwlist_d.h  ora_string_utils.c  print.c  psqlscan.l  recovery_gen.c  string_utils.c
src/oracle_fe_utils/: .gitignore  Makefile  meson.build  ora_psqlscan.c  ora_psqlscan.l  ora_string_utils.c  ora_version.c
src/oracle_test/modules/test_package_reset/: Makefile  README  benchmark_discard_package_chain.sql  meson.build  test_package_reset--1.0.sql  (+2 more)
src/oracle_test/perl/: Makefile  PostgresNode.pm  README  RecursiveCopy.pm  SimpleTee.pm  TestLib.pm  meson.build
(+2591 files in other folders)
