# Copyright (c) 2022-2024, PostgreSQL Global Development Group

# could use install_data's preserve_path option in >=0.64.0

install_data(
  'PostgreSQL/Version.pm',
  install_dir: dir_pgxs / 'src/oracle_test/perl/PostgreSQL')

install_data(
  'PostgreSQL/Test/Utils.pm',
  'PostgreSQL/Test/SimpleTee.pm',
  'PostgreSQL/Test/RecursiveCopy.pm',
  'PostgreSQL/Test/BackgroundPsql.pm',
  'PostgreSQL/Test/Cluster.pm',
  install_dir: dir_pgxs / 'src/oracle_test/perl/PostgreSQL/Test')
