# Copyright (c) 2022-2024, PostgreSQL Global Development Group
# Portions Copyright (c) 2023-2025, IvorySQL Global Development Team

backend_sources += files(
  'attoptcache.c',
  'catcache.c',
  'evtcache.c',
  'inval.c',
  'lsyscache.c',
  'partcache.c',
  'plancache.c',
  'relcache.c',
  'relfilenumbermap.c',
  'relmapper.c',
  'spccache.c',
  'syscache.c',
  'ts_cache.c',
  'typcache.c',
  'packagecache.c',
)
