# Portions Copyright (c) 2023-2026, IvorySQL Global Development Team
# Copyright (c) 2022-2025, PostgreSQL Global Development Group

backend_sources += files(
  'attoptcache.c',
  'catcache.c',
  'evtcache.c',
  'funccache.c',
  'inval.c',
  'lsyscache.c',
  'partcache.c',
  'plancache.c',
  'relcache.c',
  'relfilenumbermap.c',
  'relmapper.c',
  'spccache.c',
  'syscache.c',
  'ts_cache.c',
  'typcache.c',
  'packagecache.c',
)
